[package]
name = "tremo_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs = "0.7"
clap = "2"
serialport = {version = "4.0.0", default-features=false}
structure = "0.1.2"
crc = "3.0.1"
regex = "1.3.9"

[build-dependencies]
shadow-rs = "0.7"
